--- a/emp_register/templates/edit.html
+++ b/emp_register/templates/edit.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 <body>
-    <form method="POST" class="post-form" action="/add/{{emp_reg.id}}">
-        <input type="hidden" name="id" id="id" required maxlength="20" value="{{ emp_register.id }}"/>
+    <form method="POST" class="post-form" action="/update/{{user.id}}">
+        <input type="hidden" name="id" id="id" required maxlength="20" value="{{ user.id }}"/>
 
         {% csrf_token %}
         <div class="container">
@@ -25,23 +25,30 @@
             <div class="form-group row">
                 <label class="col-sm-1 col-form-label">Student Name:</label>
                 <div class="col-sm-4">
-                    <input type="text" name="f_name" value= "{{emp_register.f_name}}">
+                    <input type="text" name="first_name" value= "{{user.first_name}}">
                 </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-1 col-form-label">Last Name:</label>
                     <div class="col-sm-4">
-                        <input type="text" name="l_name" value= "{{emp_register.l_name}}">
+                        <input type="text" name="last_name" value= "{{user.last_name}}">
                     </div>
                     </div>
                 <div class="form-group row">
                     <label class="col-sm-1 col-form-label">Student Email:</label>
                     <div class="col-sm-4">
-                        <input type="email" name="email" value= "{{emp_register.email}}">
+                        <input type="email" name="email" value= "{{user.email}}">
                     </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-1 col-form-label">Student Id:</label>
+                        <label class="col-sm-1 col-form-label">User Name:</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="username" value= "{{user.username}}">
+                        </div>
+                        </div>
+                   
+                    <div class="form-group row">
+                        
                         <div class="col-sm-4">
                           <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
