--- a/emp_register/templates/user.html
+++ b/emp_register/templates/user.html
@@ -1,37 +1,65 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student List</title>
-    {% load static %}
+   
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 <body>
     
+    {% if user.is_authenticated %}
+    
+    <h1 style="text-align: center;" class="display-3">STUDENT DETAILS</h1>
     <table class="table table-stripped table-bordered table-sm">
         <thead class="thead-dark">
             <tr>
                 <th>First Name</th>
                 <th>Last Name</th>
+                <th>User Name</th>
                 <th>Email</th>
-                
                
+             
             </tr>
         </thead>
-        {% for emp_reg in emp_register %}
+        {% for user in users %}
         <tr>
            
-            <td>{{ emp_reg.f_name }}</td>
-            <td>{{ emp_reg.l_name }}</td>
-            <td>{{ emp_reg.email }}</td>
+            <td>{{ user.first_name }}</td>
+            <td>{{ user.last_name }}</td>
+            <td>{{ user.username }}</td>
+            <td>{{ user.email }}</td>
+           
             
            
+
         </tr>
 
 {% endfor %}
+
     </table>
+   
+            <form class="form-inline my-2 my-lg-0">
+                <td></td>
+                <td></td>
+                <td></td>
+                
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><a href="/logout/"  class="btn btn-outline-danger my-2 my-sm-0 " >Log out</a></td>
+            </tr>
+        </table>
+        
+      </form>
+    
 
     
+
+
+
+{% endif %}
 </body>
 </html>
